--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
         <li> Google: 2022 - ...</li>
         
     </ul>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p>Siliconmade dersi için yapılmıştır</p>
 </body>
 </html>
